--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,7 +92,7 @@
         <item>10</item>
     </string-array>
 
-    <string-array name="avatar">
+    <integer-array name="avatar">
         <item>@drawable/user1</item>
         <item>@drawable/user2</item>
         <item>@drawable/user3</item>
@@ -103,5 +103,5 @@
         <item>@drawable/user8</item>
         <item>@drawable/user9</item>
         <item>@drawable/user10</item>
-    </string-array>
+    </integer-array>
 </resources>
