--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,10 @@
     <string name="followers">followers</string>
     <string name="bullet">•</string>
     <string name="following">following</string>
+    <string name="repository">Repository</string>
+    <string name="following_caps">Following</string>
+    <string name="follower_caps">Follower</string>
+    <string name="visit_on_github">Visit on GitHub</string>
 
     <string-array name="username">
         <item>JakeWharton</item>
