--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="background">Background</string>
     <string name="avatar">Avatar</string>
     <string name="icon_followers">Icon Followers</string>
-
+    <string name="unknown">Unknown</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
