--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -18,4 +18,6 @@
     <string name="refresh">Refresh</string>
     <string name="error_get_data">Error Get Data</string>
     <string name="no_result">No Result</string>
+    <string name="error_msg">Please type something</string>
+    <string name="language">Language</string>
 </resources>
